# cuentts

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_imports.ipynb
src/cuentts/: __init__.py  main.py
src/cuentts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cuentts/config/: constants.py  credentials.py  logger.py  paths.py  states.py
src/cuentts/model/: voice_gen.py
src/cuentts/sessions/: manager.py  models.py
src/cuentts/telegram/: parser.py  sender.py  tts_instance.py  webhook.py
src/cuentts/telegram/handlers/: commands.py  text.py  voice.py
