[project]
name = "cuentts"
version = "0.1.0"
authors = [
    { name = "Angel Merino", email = "acedeno00@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.115",
    "python-dotenv>=1.0",
    "qwen-tts>=0.1.1",
    "requests>=2.32",
    "rich>=13",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers==4.57.6",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
cuentts = "cuentts:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
